@@ -31,6 +31,7 @@ Revision history for AnyEvent::IRC
           commands 376 or 422 have been seen.
         - added ctcp_auto_reply() method to AnyEvent::IRC::Client interface.
         - Util::mk_msg does NOT append "\015\012" anymore.
+        - send_srv queue is now flushed in an event callback.
 
 0.5     Sun Mar 11 23:54:10 CET 2007
         - added server password support
